# human

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  package-lock.json  package.json
.github/: README.md
circuits/src/: kyc.circom
contracts/: Cargo.toml  README.md
contracts/kyc_verifier/: Cargo.toml
contracts/kyc_verifier/src/: lib.rs  test.rs
docs/: README.md  capa-1-matcher.md  funding-audit.md
funding/api/: package.json
funding/api/src/: gating.ts  server.ts  store.ts
funding/circuits/src/: funding_opinion.circom
funding/contracts/campaign_controller/: Cargo.toml
identity/: README.md
identity/circuits/: README.md  package-lock.json  package.json
identity/circuits/scripts/: compile.sh  gen_input.mjs  gen_testdata.mjs  prove.sh  setup.sh
identity/circuits/src/: kyc.circom
identity/contracts/: README.md
identity/contracts/kyc_verifier/: Cargo.toml
identity/contracts/kyc_verifier/src/: lib.rs  test.rs  testdata.rs
identity/issuer/: package.json  vitest.config.ts
identity/issuer/matcher/: devProvider.ts  documentCheck.ts  faceEngine.ts  provider.ts  server.ts
identity/issuer/src/: enroll.test.ts  index.ts
issuer/: README.md
issuer/src/: index.ts
platform/: README.md
platform/api/: README.md  package.json
platform/api/src/: index.ts  server.ts
platform/contracts/: README.md
platform/contracts/opinion_board/: Cargo.toml
platform/curation/: README.md  package.json
platform/curation/src/: index.ts
scripts/: deploy-matcher-cloudrun.sh  deploy_testnet.sh  e2e.ts  e2e_demo.sh  funding-seed.mjs
web/: README.md  index.html  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/feed/: UserContext.tsx  platformApi.ts
web/src/kyc/: api.ts  (+6 more)
(+39 files in other folders)
