[workspace]
resolver = "2"
members = [
    "identity/contracts/kyc_verifier",
    "platform/contracts/opinion_board",
]

[workspace.dependencies]
# TODO: fijar la versión del SDK con soporte de las primitivas ZK (P25/P26:
# BN254 / Poseidon). Ver docs de soroban-sdk en `09 - Tools/Recursos ZK & Privacy en Stellar`.
soroban-sdk = "22"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
