[workspace]
resolver = "2"
members = [
    "identity/contracts/kyc_verifier",
    "platform/contracts/opinion_board",
]

[workspace.dependencies]
# soroban-sdk 25.x: trae las host functions BLS12-381 (crypto::bls12_381, CAP-0059)
# que usa el verificador Groth16 oficial. NOTA: las primitivas BN254/Poseidon nativas
# siguen siendo CAP-0074/0075 (propuestas, no disponibles) — por eso la CAPA 1 usa
# BLS12-381 (ver identity/circuits/src/kyc.circom y el README del contrato).
soroban-sdk = "25.1.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
