[package]
name = "kyc_verifier"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
# Parseo de puntos BLS12-381 desde las coordenadas decimales de snarkjs (solo en tests),
# igual que el test del `groth16_verifier` oficial de soroban-examples.
ark-bls12-381 = "0.4.0"
ark-serialize = "0.4.2"
ark-ff = "0.4.2"
ark-ec = "0.4.2"
